--- a/configdb.json
+++ b/configdb.json
@@ -1,7 +1,7 @@
 {
         "user": "postgres",
         "password":"root",
-        "host": "localhost",
+        "host": "host.docker.internal",
         "Port": "5432",
         "dbname":"server_project"  
 } 
